--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#more-about">About Me</a></li>
+            <li><a href="#recent-work">Recent Work</a></li>
             <li><a href="http://blog.katiewomersley.com/">Blog</a></li>
           </ul>
         </div>
@@ -63,7 +64,7 @@
 
       <div class="page-header">
         <h1 class="editable" editable-label="name">Katie Womersley</h1>
-        <h4 class="editable" editable-label="tagline">and I build cool web stuff</h4>
+        <h4 class="editable" editable-label="tagline"></h4>
         <div>
           <a class="editable" editable-label="github-link" href="https://github.com/KatieLo">
             <i class="fa fa-github"></i></a>
@@ -81,16 +82,45 @@
 
       <div class="section" id="about">
           <div class="row">
-            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle editable" editable-label="profile-pic" src="images/katie2.jpg"></div>
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-sm-4 hidden-xs img-container"><img class="img-circle editable" editable-label="profile-pic" src="images/0147-sqaure.jpg"></div>
+            <div class="col-xs-12 col-sm-8">
               <p class="editable" editable-label="short-blurb">
-                Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end developer at <a href="https://buffer.com/about">Buffer</a> where I spend my days in React, Backbone and sometimes our PHP backend. I get excited about building a product that delights our users and working with some of the best folks on the interwebs!
+                Hi, I'm Katie. I'm a Director of Engineering at Buffer where I spend my days crafting productive, effective teams and delivering a world class software product.
               </p>
               <p class="editable" editable-label="long-blurb">
-                Previously I was part of the awesome dev team at Cape Town startup <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="https://travelground.com">Travelground.com</a>, where I worked on the full stack from SQL, PHP to the frontend. Before that I started a small digital agency, <a href="http://dune8.com">Dune8</a> where I built everything from a full Rails CMS to a custom WordPress site.
+                I was a full-stack engineer at Buffer before changing into leadership and before that was part of the awesome dev team at Cape Town startup LekkeSlaap.co.za and its English sister site, Travelground.com.
               </p>
             </div>
           </div>
+      </div>
+
+      <div class="section" id="recent-work">
+        <h2 class="editable" editable-label="recent-work">Recent Work</h2>
+        <div class="row">
+          <div class="col-xs-12">
+            <a class="edtiable" editable-label="recent-work-label-1" href="https://www.fastcompany.com/40495919/the-emotionally-intelligent-managers-guide-to-leading-remote-teams">
+              <h3>
+                Interview with FastCompany: The Emotionally Intelligent Manager’s Guide To Leading Remote Teams
+              </h3>
+            </a>
+
+            <p class="editable" editable-label="recent-work-1">
+              I got to chat to <a href="https://twitter.com/suzanbond">Suzan Bond</a> recently for this Fast Company piece on leading remote teams. This is a major focus for me at Buffer and we dove into the challenges of authentic, open communication and how to embrace conflict as a leader to create more effective remote teams.
+            </p>
+
+            <a class="edtiable" editable-label="recent-work-label-2" href="">
+              <h3>
+              </h3>
+            </a>
+
+            <a class="edtiable" editable-label="recent-work-label-3" href="">
+              <h3>
+              </h3>
+            </a>
+            <p class="editable" editable-label="recent-work-2">
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="section" id="more-about">
@@ -105,7 +135,7 @@
             </p>
 
             <p class="editable" editable-label="about-me-3">
-              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me</a>. I'd love to say hi :)
+              Find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting engineering leadership and remote work or <a href="https://medium.com/@kawomersley">read my blog</a>.
             </p>
           </div>
         </div>
@@ -121,7 +151,6 @@
                 <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a>
                 <a href="https://medium.com/@kawomersley"><i class="fa fa-medium"></i></a>
-                <a class="editable" editable-label="email" href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a>k.a.womersley@gmail.com
           </div>
         </div>
       </div>
