--- a/index.html
+++ b/index.html
@@ -179,9 +179,10 @@
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <style type="text/css">.editable { visibility: hidden; }</style>
     <script type="text/javascript">
-      var pm = document.createElement('script'); var url = window.location.href;
-      pm.setAttribute('src','https://pagemagic.io/pagemagic.js?domainId=2b3289e2-04a7-48a0-b9&url='+encodeURI(url));
-      document.head.appendChild(pm);
+      try { var pm = document.createElement('script');
+        pm.setAttribute('src','https://pagemagicio.herokuapp.com/pagemagic.js?domainId=2b3289e2-04a7-48a0-b9&url='+encodeURI(window.location.href)); pm.async = true;
+        pm.onerror = function() { document.getElementById('pm-styles').disabled = true; }; document.head.appendChild(pm);
+      } catch(err) { document.getElementById('pm-styles').disabled = true; }
     </script>
   </body>
 </html>
