update PageMagic styles

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
-    <style type="text/css">.editable { visibility: hidden; }</style>
+    <style type="text/css" id="pm-styles">.editable{visibility:hidden;}</style>
     <script type="text/javascript">
       try { var pm = document.createElement('script');
         pm.setAttribute('src','https://pagemagicio.herokuapp.com/pagemagic.js?domainId=2b3289e2-04a7-48a0-b9&url='+encodeURI(window.location.href)); pm.async = true;
