add new articles

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <div class="col-sm-4 hidden-xs img-container"><img class="img-circle editable" editable-label="profile-pic" src="images/0147-sqaure.jpg"></div>
             <div class="col-xs-12 col-sm-8">
               <p class="editable" editable-label="short-blurb">
-                Hi, I'm Katie. I'm a Director of Engineering at Buffer where I spend my days crafting productive, effective teams and delivering a world class software product.
+                Hi, I'm Katie. I'm a Director of Engineering at Buffer, a globally distributed team with no offices. At Buffer, I lead the engineering team focusing on supporting our engineering managers and crafting an amazing environment where engineers do their best work.
               </p>
               <p class="editable" editable-label="long-blurb">
-                I was a full-stack engineer at Buffer before changing into leadership and before that was part of the awesome dev team at Cape Town startup LekkeSlaap.co.za and its English sister site, Travelground.com.
+                I champion remote work and believe distributed teams are the future. You'll find me sharing engineering leadership thoughts on Twitter and Medium.
               </p>
             </div>
           </div>
@@ -98,7 +98,26 @@
         <h2 class="editable" editable-label="recent-work">Recent Work</h2>
         <div class="row">
           <div class="col-xs-12">
-            <a class="edtiable" editable-label="recent-work-label-1" href="https://www.fastcompany.com/40495919/the-emotionally-intelligent-managers-guide-to-leading-remote-teams" target="_blank">
+            <a class="edtiable" editable-label="recent-work-label-1" href="https://blog.gitprime.com/high-touch-leadership-remote-culture" target="_blank">
+              <h3>
+                Interview with GitPrime: High Touch Leadership in a Remote Team
+              </h3>
+            </a>
+            <p class="editable" editable-label="recent-work--1">
+              One of my favourite interviews, chatting to <a href="https://twitter.com/traviskimmel">Travis</a>, CEO of GitPrime, about high-touch remote leadership, being open as a leader, and how managers are the first line of defence for mental health.
+            </p>
+
+            <a class="edtiable" editable-label="recent-work-label--1" href="https://www.managersclub.com/katie-womersley/" target="_blank">
+              <h3>
+                Managers'Club: Sharing advice for engineering managers navigating change
+              </h3>
+            </a>
+
+            <p class="editable" editable-label="recent-work-0">
+              Chatting with Vidal for Managers' Club, I shared my approach to hiring, advice for new managers, and the resources, time management skills and personal habits that have helped me succeed and scale myself in my role from engineering manager to director.
+            </p>
+
+            <a class="edtiable" editable-label="recent-work-label-0" href="https://www.fastcompany.com/40495919/the-emotionally-intelligent-managers-guide-to-leading-remote-teams" target="_blank">
               <h3>
                 Interview with FastCompany: The Emotionally Intelligent Manager’s Guide To Leading Remote Teams
               </h3>
