--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
         <h2 class="editable" editable-label="recent-work">Recent Work</h2>
         <div class="row">
           <div class="col-xs-12">
+            <a class="edtiable" editable-label="recent-work-label-2" href="http://www.oreilly.com/pub/au/7573" target="_blank">
+              <h3>
+                Upcoming with O'Reilly: 'Atomic Migration Strategy for Web Teams'
+              </h3>
+            </a>
+            <p class="editable" editable-label="recent-work--2">
+              I'm currently writing an O'Reilly book, "Atomic Migration Strategy for Web Teams". This is a hands-on practical guide how the product engineering team I lead at Buffer completed an asynchronous rewrite of the frontend client without delaying the product roadmap, with Harrison Harnisch. This is the book we wish we'd had, coming soon for you!
+            </p>
+
             <a class="edtiable" editable-label="recent-work-label-1" href="https://blog.gitprime.com/high-touch-leadership-remote-culture" target="_blank">
               <h3>
                 Interview with GitPrime: High Touch Leadership in a Remote Team
