--- a/index.html
+++ b/index.html
@@ -66,16 +66,13 @@
         <h1 class="editable" editable-label="name">Katie Womersley</h1>
         <h4 class="editable" editable-label="tagline"></h4>
         <div>
-          <a class="editable" editable-label="github-link" href="https://github.com/KatieLo">
+          <a class="editable" editable-label="github-link" href="https://github.com/KatieLo/README/blob/master/README.md">
             <i class="fa fa-github"></i></a>
           <a class="editable" editable-label="twitter-link" href="https://twitter.com/katie_womers">
             <i class="fa fa-twitter"></i>
           </a>
           <a class="editable" editable-label="medium-link" href="https://medium.com/@kawomersley">
             <i class="fa fa-medium"></i>
-          </a>
-          <a class="editable" editable-label="linkedin-link" href="https://www.linkedin.com/in/kathleenwomersley">
-            <i class="fa fa-linkedin-square"></i>
           </a>
         </div>
       </div>
