--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#more-about">About Me</a></li>
-            <li><a href="#recent-work">Recent Work</a></li>
-            <li><a href="http://blog.katiewomersley.com/">Blog</a></li>
+            <li><a href="#recent-work">Articles & Interviews</a></li>
+            <li><a href="https://medium.com/@kawomersley">Writing</a></li>
           </ul>
         </div>
       </div>
